fix: cover writing header on mobile (#246)

--- a/src/frontend/styles/components/writing.pcss
+++ b/src/frontend/styles/components/writing.pcss
@@ -3,7 +3,6 @@
   margin-top: 0;
   background: #fff;
   box-shadow: 0 3px 10px #fff;
-  z-index: 2;
   font-size: 14px;
 
   &__save {
